Works/CS445 Compiler Design/hw2 Syntax Tree/Given Files and Test Files and Outputs/parser.output
Terminals unused in grammar

   CHSIGN
   SIZEOF


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpec varDeclList ';'

    7 scopedVarDecl: STATIC typeSpec varDeclList ';'
    8              | typeSpec varDeclList ';'

    9 varDeclList: varDeclList ',' varDeclInit
   10            | varDeclInit

   11 varDeclInit: varDeclId
   12            | varDeclId ':' simpleExp

   13 varDeclId: ID
   14          | ID '[' NUMCONST ']'

   15 typeSpec: INT
   16         | BOOL
   17         | CHAR

   18 funDecl: typeSpec ID '(' parms ')' stmt
   19        | ID '(' parms ')' stmt

   20 parms: parmList
   21      | %empty

   22 parmList: parmList ';' parmTypeList
   23         | parmTypeList

   24 parmTypeList: typeSpec parmIdList

   25 parmIdList: parmIdList ',' parmId
   26           | parmId

   27 parmId: ID
   28       | ID '[' ']'

   29 stmt: matched
   30     | unmatched

   31 matched: IF simpleExp THEN matched ELSE matched
   32        | WHILE simpleExp DO matched
   33        | FOR ID '=' iterRange DO matched
   34        | otherStmts

   35 unmatched: IF simpleExp THEN matched
   36          | IF simpleExp THEN unmatched
   37          | IF simpleExp THEN matched ELSE unmatched
   38          | WHILE simpleExp DO unmatched
   39          | FOR ID '=' iterRange DO unmatched

   40 otherStmts: expStmt
   41           | compoundStmt
   42           | returnStmt
   43           | breakStmt

   44 expStmt: exp ';'
   45        | ';'

   46 compoundStmt: '{' localDecls stmtList '}'

   47 localDecls: localDecls scopedVarDecl
   48           | %empty

   49 stmtList: stmtList stmt
   50         | %empty

   51 iterRange: simpleExp TO simpleExp
   52          | simpleExp TO simpleExp BY simpleExp

   53 returnStmt: RETURN ';'
   54           | RETURN exp ';'

   55 breakStmt: BREAK ';'

   56 exp: mutable '=' exp
   57    | mutable ADDASS exp
   58    | mutable SUBASS exp
   59    | mutable MULASS exp
   60    | mutable DIVASS exp
   61    | mutable INC
   62    | mutable DEC
   63    | simpleExp

   64 simpleExp: simpleExp OR andExp
   65          | andExp

   66 andExp: andExp AND unaryRelExp
   67       | unaryRelExp

   68 unaryRelExp: NOT unaryRelExp
   69            | relExp

   70 relExp: minmaxExp relop minmaxExp
   71       | minmaxExp

   72 relop: LEQ
   73      | '<'
   74      | '>'
   75      | GEQ
   76      | EQ
   77      | NEQ

   78 minmaxExp: minmaxExp minmaxop sumExp
   79          | sumExp

   80 minmaxop: MAX
   81         | MIN

   82 sumExp: sumExp sumop mulExp
   83       | mulExp

   84 sumop: '+'
   85      | '-'

   86 mulExp: mulExp mulop unaryExp
   87       | unaryExp

   88 mulop: '*'
   89      | '/'
   90      | '%'

   91 unaryExp: unaryop unaryExp
   92         | factor

   93 unaryop: '-'
   94        | '*'
   95        | '?'

   96 factor: immutable
   97       | mutable

   98 mutable: ID
   99        | ID '[' exp ']'

  100 immutable: '(' exp ')'
  101          | call
  102          | constant

  103 call: ID '(' args ')'

  104 args: argList
  105     | %empty

  106 argList: argList ',' exp
  107        | exp

  108 constant: NUMCONST
  109         | CHARCONST
  110         | STRINGCONST
  111         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 90
'(' (40) 18 19 100 103
')' (41) 18 19 100 103
'*' (42) 88 94
'+' (43) 84
',' (44) 9 25 106
'-' (45) 85 93
'/' (47) 89
':' (58) 12
';' (59) 6 7 8 22 44 45 53 54 55
'<' (60) 73
'=' (61) 33 39 56
'>' (62) 74
'?' (63) 95
'[' (91) 14 28 99
']' (93) 14 28 99
'{' (123) 46
'}' (125) 46
error (256)
ADDASS (258) 57
ID (259) 13 14 18 19 27 28 33 39 98 99 103
INT (260) 15
NUMCONST (261) 14 108
IF (262) 31 35 36 37
EQ (263) 76
RETURN (264) 53 54
STRINGCONST (265) 110
THEN (266) 31 35 36 37
ELSE (267) 31 37
DEC (268) 62
CHARCONST (269) 109
BOOL (270) 16
CHAR (271) 17
STATIC (272) 7
AND (273) 66
OR (274) 64
NOT (275) 68
BOOLCONST (276) 111
FOR (277) 33 39
TO (278) 51 52
BY (279) 52
DO (280) 32 33 38 39
BREAK (281) 55
WHILE (282) 32 38
INC (283) 61
MIN (284) 81
MAX (285) 80
GEQ (286) 75
LEQ (287) 72
NEQ (288) 77
SUBASS (289) 58
MULASS (290) 59
DIVASS (291) 60
CHSIGN (292)
SIZEOF (293)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1, on right: 0
declList (59)
    on left: 2 3, on right: 1 2
decl (60)
    on left: 4 5, on right: 2 3
varDecl (61)
    on left: 6, on right: 4
scopedVarDecl (62)
    on left: 7 8, on right: 47
varDeclList (63)
    on left: 9 10, on right: 6 7 8 9
varDeclInit (64)
    on left: 11 12, on right: 9 10
varDeclId (65)
    on left: 13 14, on right: 11 12
typeSpec (66)
    on left: 15 16 17, on right: 6 7 8 18 24
funDecl (67)
    on left: 18 19, on right: 5
parms (68)
    on left: 20 21, on right: 18 19
parmList (69)
    on left: 22 23, on right: 20 22
parmTypeList (70)
    on left: 24, on right: 22 23
parmIdList (71)
    on left: 25 26, on right: 24 25
parmId (72)
    on left: 27 28, on right: 25 26
stmt (73)
    on left: 29 30, on right: 18 19 49
matched (74)
    on left: 31 32 33 34, on right: 29 31 32 33 35 37
unmatched (75)
    on left: 35 36 37 38 39, on right: 30 36 37 38 39
otherStmts (76)
    on left: 40 41 42 43, on right: 34
expStmt (77)
    on left: 44 45, on right: 40
compoundStmt (78)
    on left: 46, on right: 41
localDecls (79)
    on left: 47 48, on right: 46 47
stmtList (80)
    on left: 49 50, on right: 46 49
iterRange (81)
    on left: 51 52, on right: 33 39
returnStmt (82)
    on left: 53 54, on right: 42
breakStmt (83)
    on left: 55, on right: 43
exp (84)
    on left: 56 57 58 59 60 61 62 63, on right: 44 54 56 57 58 59 60
    99 100 106 107
simpleExp (85)
    on left: 64 65, on right: 12 31 32 35 36 37 38 51 52 63 64
andExp (86)
    on left: 66 67, on right: 64 65 66
unaryRelExp (87)
    on left: 68 69, on right: 66 67 68
relExp (88)
    on left: 70 71, on right: 69
relop (89)
    on left: 72 73 74 75 76 77, on right: 70
minmaxExp (90)
    on left: 78 79, on right: 70 71 78
minmaxop (91)
    on left: 80 81, on right: 78
sumExp (92)
    on left: 82 83, on right: 78 79 82
sumop (93)
    on left: 84 85, on right: 82
mulExp (94)
    on left: 86 87, on right: 82 83 86
mulop (95)
    on left: 88 89 90, on right: 86
unaryExp (96)
    on left: 91 92, on right: 86 87 91
unaryop (97)
    on left: 93 94 95, on right: 91
factor (98)
    on left: 96 97, on right: 92
mutable (99)
    on left: 98 99, on right: 56 57 58 59 60 61 62 97
immutable (100)
    on left: 100 101 102, on right: 96
call (101)
    on left: 103, on right: 101
args (102)
    on left: 104 105, on right: 103
argList (103)
    on left: 106 107, on right: 104 106
constant (104)
    on left: 108 109 110 111, on right: 102


State 0

    0 $accept: . program $end

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program   go to state 5
    declList  go to state 6
    decl      go to state 7
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 1

   19 funDecl: ID . '(' parms ')' stmt

    '('  shift, and go to state 11


State 2

   15 typeSpec: INT .

    $default  reduce using rule 15 (typeSpec)


State 3

   16 typeSpec: BOOL .

    $default  reduce using rule 16 (typeSpec)


State 4

   17 typeSpec: CHAR .

    $default  reduce using rule 17 (typeSpec)


State 5

    0 $accept: program . $end

    $end  shift, and go to state 12


State 6

    1 program: declList .
    2 declList: declList . decl

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl      go to state 13
    varDecl   go to state 8
    typeSpec  go to state 9
    funDecl   go to state 10


State 7

    3 declList: decl .

    $default  reduce using rule 3 (declList)


State 8

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


State 9

    6 varDecl: typeSpec . varDeclList ';'
   18 funDecl: typeSpec . ID '(' parms ')' stmt

    ID  shift, and go to state 14

    varDeclList  go to state 15
    varDeclInit  go to state 16
    varDeclId    go to state 17


State 10

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


State 11

   19 funDecl: ID '(' . parms ')' stmt

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 19
    parmList      go to state 20
    parmTypeList  go to state 21


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


State 14

   13 varDeclId: ID .
   14          | ID . '[' NUMCONST ']'
   18 funDecl: typeSpec ID . '(' parms ')' stmt

    '('  shift, and go to state 22
    '['  shift, and go to state 23

    $default  reduce using rule 13 (varDeclId)


State 15

    6 varDecl: typeSpec varDeclList . ';'
    9 varDeclList: varDeclList . ',' varDeclInit

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


State 16

   10 varDeclList: varDeclInit .

    $default  reduce using rule 10 (varDeclList)


State 17

   11 varDeclInit: varDeclId .
   12            | varDeclId . ':' simpleExp

    ':'  shift, and go to state 26

    $default  reduce using rule 11 (varDeclInit)


State 18

   24 parmTypeList: typeSpec . parmIdList

    ID  shift, and go to state 27

    parmIdList  go to state 28
    parmId      go to state 29


State 19

   19 funDecl: ID '(' parms . ')' stmt

    ')'  shift, and go to state 30


State 20

   20 parms: parmList .
   22 parmList: parmList . ';' parmTypeList

    ';'  shift, and go to state 31

    $default  reduce using rule 20 (parms)


State 21

   23 parmList: parmTypeList .

    $default  reduce using rule 23 (parmList)


State 22

   18 funDecl: typeSpec ID '(' . parms ')' stmt

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (parms)

    typeSpec      go to state 18
    parms         go to state 32
    parmList      go to state 20
    parmTypeList  go to state 21


State 23

   14 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 33


State 24

    6 varDecl: typeSpec varDeclList ';' .

    $default  reduce using rule 6 (varDecl)


State 25

    9 varDeclList: varDeclList ',' . varDeclInit

    ID  shift, and go to state 34

    varDeclInit  go to state 35
    varDeclId    go to state 17


State 26

   12 varDeclInit: varDeclId ':' . simpleExp

    '*'          shift, and go to state 36
    '('          shift, and go to state 37
    '-'          shift, and go to state 38
    '?'          shift, and go to state 39
    ID           shift, and go to state 40
    NUMCONST     shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    CHARCONST    shift, and go to state 43
    NOT          shift, and go to state 44
    BOOLCONST    shift, and go to state 45

    simpleExp    go to state 46
    andExp       go to state 47
    unaryRelExp  go to state 48
    relExp       go to state 49
    minmaxExp    go to state 50
    sumExp       go to state 51
    mulExp       go to state 52
    unaryExp     go to state 53
    unaryop      go to state 54
    factor       go to state 55
    mutable      go to state 56
    immutable    go to state 57
    call         go to state 58
    constant     go to state 59


State 27

   27 parmId: ID .
   28       | ID . '[' ']'

    '['  shift, and go to state 60

    $default  reduce using rule 27 (parmId)


State 28

   24 parmTypeList: typeSpec parmIdList .
   25 parmIdList: parmIdList . ',' parmId

    ','  shift, and go to state 61

    $default  reduce using rule 24 (parmTypeList)


State 29

   26 parmIdList: parmId .

    $default  reduce using rule 26 (parmIdList)


State 30

   19 funDecl: ID '(' parms ')' . stmt

    '*'          shift, and go to state 36
    '('          shift, and go to state 37
    '-'          shift, and go to state 38
    '{'          shift, and go to state 62
    ';'          shift, and go to state 63
    '?'          shift, and go to state 39
    ID           shift, and go to state 40
    NUMCONST     shift, and go to state 41
    IF           shift, and go to state 64
    RETURN       shift, and go to state 65
    STRINGCONST  shift, and go to state 42
    CHARCONST    shift, and go to state 43
    NOT          shift, and go to state 44
    BOOLCONST    shift, and go to state 45
    FOR          shift, and go to state 66
    BREAK        shift, and go to state 67
    WHILE        shift, and go to state 68

    stmt          go to state 69
    matched       go to state 70
    unmatched     go to state 71
    otherStmts    go to state 72
    expStmt       go to state 73
    compoundStmt  go to state 74
    returnStmt    go to state 75
    breakStmt     go to state 76
    exp           go to state 77
    simpleExp     go to state 78
    andExp        go to state 47
    unaryRelExp   go to state 48
    relExp        go to state 49
    minmaxExp     go to state 50
    sumExp        go to state 51
    mulExp        go to state 52
    unaryExp      go to state 53
    unaryop       go to state 54
    factor        go to state 55
    mutable       go to state 79
    immutable     go to state 57
    call          go to state 58
    constant      go to state 59


State 31

   22 parmList: parmList ';' . parmTypeList

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    typeSpec      go to state 18
    parmTypeList  go to state 80


State 32

   18 funDecl: typeSpec ID '(' parms . ')' stmt

    ')'  shift, and go to state 81


State 33

   14 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 82


State 34

   13 varDeclId: ID .
   14          | ID . '[' NUMCONST ']'

    '['  shift, and go to state 23

    $default  reduce using rule 13 (varDeclId)


State 35

    9 varDeclList: varDeclList ',' varDeclInit .

    $default  reduce using rule 9 (varDeclList)


State 36

   94 unaryop: '*' .

    $default  reduce using rule 94 (unaryop)


State 37

  100 immutable: '(' . exp ')'

    '*'          shift, and go to state 36
    '('          shift, and go to state 37
    '-'          shift, and go to state 38
    '?'          shift, and go to state 39
    ID           shift, and go to state 40
    NUMCONST     shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    CHARCONST    shift, and go to state 43
    NOT          shift, and go to state 44
    BOOLCONST    shift, and go to state 45

    exp          go to state 83
    simpleExp    go to state 78
    andExp       go to state 47
    unaryRelExp  go to state 48
    relExp       go to state 49
    minmaxExp    go to state 50
    sumExp       go to state 51
    mulExp       go to state 52
    unaryExp     go to state 53
    unaryop      go to state 54
    factor       go to state 55
    mutable      go to state 79
    immutable    go to state 57
    call         go to state 58
    constant     go to state 59


State 38

   93 unaryop: '-' .

    $default  reduce using rule 93 (unaryop)


State 39

   95 unaryop: '?' .

    $default  reduce using rule 95 (unaryop)


State 40

   98 mutable: ID .
   99        | ID . '[' exp ']'
  103 call: ID . '(' args ')'

    '('  shift, and go to state 84
    '['  shift, and go to state 85

    $default  reduce using rule 98 (mutable)


State 41

  108 constant: NUMCONST .

    $default  reduce using rule 108 (constant)


State 42

  110 constant: STRINGCONST .

    $default  reduce using rule 110 (constant)


State 43

  109 constant: CHARCONST .

    $default  reduce using rule 109 (constant)


State 44

   68 unaryRelExp: NOT . unaryRelExp

    '*'          shift, and go to state 36
    '('          shift, and go to state 37
    '-'          shift, and go to state 38
    '?'          shift, and go to state 39
    ID           shift, and go to state 40
    NUMCONST     shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    CHARCONST    shift, and go to state 43
    NOT          shift, and go to state 44
    BOOLCONST    shift, and go to state 45

    unaryRelExp  go to state 86
    relExp       go to state 49
    minmaxExp    go to state 50
    sumExp       go to state 51
    mulExp       go to state 52
    unaryExp     go to state 53
    unaryop      go to state 54
    factor       go to state 55
    mutable      go to state 56
    immutable    go to state 57
    call         go to state 58
    constant     go to state 59


State 45

  111 constant: BOOLCONST .

    $default  reduce using rule 111 (constant)


State 46

   12 varDeclInit: varDeclId ':' simpleExp .
   64 simpleExp: simpleExp . OR andExp

    OR  shift, and go to state 87

    $default  reduce using rule 12 (varDeclInit)


State 47

   65 simpleExp: andExp .
   66 andExp: andExp . AND unaryRelExp

    AND  shift, and go to state 88

    $default  reduce using rule 65 (simpleExp)


State 48

   67 andExp: unaryRelExp .

    $default  reduce using rule 67 (andExp)


State 49

   69 unaryRelExp: relExp .

    $default  reduce using rule 69 (unaryRelExp)


State 50

   70 relExp: minmaxExp . relop minmaxExp
   71       | minmaxExp .
   78 minmaxExp: minmaxExp . minmaxop sumExp

    '<'  shift, and go to state 89
    '>'  shift, and go to state 90
    EQ   shift, and go to state 91
    MIN  shift, and go to state 92
    MAX  shift, and go to state 93
    GEQ  shift, and go to state 94
    LEQ  shift, and go to state 95
    NEQ  shift, and go to state 96

    $default  reduce using rule 71 (relExp)

    relop     go to state 97
    minmaxop  go to state 98


State 51

   79 minmaxExp: sumExp .
   82 sumExp: sumExp . sumop mulExp

    '-'  shift, and go to state 99
    '+'  shift, and go to state 100

    $default  reduce using rule 79 (minmaxExp)

    sumop  go to state 101


State 52

   83 sumExp: mulExp .
   86 mulExp: mulExp . mulop unaryExp

    '%'  shift, and go to state 102
    '*'  shift, and go to state 103
    '/'  shift, and go to state 104

    $default  reduce using rule 83 (sumExp)

    mulop  go to state 105


State 53

   87 mulExp: unaryExp .

    $default  reduce using rule 87 (mulExp)


State 54

   91 unaryExp: unaryop . unaryExp

    '*'          shift, and go to state 36
    '('          shift, and go to state 37
    '-'          shift, and go to state 38
    '?'          shift, and go to state 39
    ID           shift, and go to state 40
    NUMCONST     shift, and go to state 41
    STRINGCONST  shift, and go to state 42
    CHARCONST    shift, and go to state 43
    BOOLCONST    shift, and go to state 45

    unaryExp   go to state 106
    unaryop    go to state 54
    factor     go to state 55
    mutable    go to state 56
    immutable  go to state 57
    call       go to state 58
    constant   go to state 59


State 55

   92 unaryExp: factor .

    $default  reduce using rule 92 (unaryExp)


State 56

   97 factor: mutable .

    $default  reduce using rule 97 (factor)


State 57

   96 factor: immutable .

    $default  reduce using rule 96 (factor)


State 58

  101 immutable: call .

    $default  reduce using rule 101 (immutable)


State 59
